# SECure-RAG

./: .gitignore  API Key Instructions.md  Adding new tools.md  Dockerfile  README.md  Streamlit.Dockerfile  agent_page.py  app.py  explainability_agent_page.py  logging.yaml  main.py  pyproject.toml
FinAgent/: ToolHandler.py  __init__.py  agents.py
FinAgent/config/: auto_state_tool.txt  multi_state_system_prompt.txt  prompts.py  stateless_system_prompt.txt  states.py
FinAgent/guardrails/: guardrail_api.py  guardrail_local_gpu.py
FinAgent/models/: __init__.py  models.py
FinAgent/schema/: __init__.py  response.schema.json  schema.py
FinAgent/tools/: __init__.py  alphavantage_tool.py  asknews_tool.py  bing_tool.py  edgar_tool.py  finnhub_news.py  finprep.py  google_news_tool.py  hyde_hostable_bm25.py  hyde_tools_bm25.py  lightrag_tool.py  naive_rag_tool.py  python_calculator.py  sec_parser_tool.py  state_change_tool.py  web_search_tool.py  wolfram_alpha_tool.py  yfin_tool.py
FinAgent/utils/: __init__.py  json_extraction.py  markdown_handler.py  subclassed_client.py
PDF Parser/Dense Retriever/: docParse.py  rag_tool.py  requirements.txt  vectorstore.py
PDF Parser/Sparse Retriever/: app.py  app.yaml  credentials.json  docParse.py  rag_tool.py  requirements.txt
evaluation results/: all_results - Copy.json  all_results.json  all_results_different_states - Copy.json  all_results_different_states.json  finqa_results_formatted_mixed_states.json  nvda_results_formatted_mixed_states.json
images/: agentic-rag.drawio  meta-for-ppt.drawio
(+53 files in other folders)
