[tool.poetry]
name = "FinAgent"
packages = [
    { include = "FinAgent"}
]
version = "0.1.0"
description = "Enhancing Financial RAG with Agentic AI and Multi-HyDE: A Novel Approach to Knowledge Retrieval and Hallucination Reduction"
authors = ["Anonymous"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
duckduckgo-search = "^6.3.6"
sentence-transformers = "^3.3.1"
edgartools = "^3.2.4"
litellm = "^1.52.15"
langchain = "^0.3.8"
langchain-community = "^0.3.8"
langchain-core = "^0.3.21"
langchain-text-splitters = "^0.3.2"
langsmith = "^0.1.146"
yfinance = "^0.2.50"
streamlit = "^1.40.0"
accelerate = "^0.26.0"
transformers = "^4.12.0"
groq = "^0.13.0"
googlenews = "^1.6.15"
wolframalpha = "^5.1.3"
finnhub-python = "^2.4.22"
rank-bm25 = "^0.2.2"
haystack-ai = "^2.7.0"
asknews = "^0.7.53"
replicate = "^1.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
